TEST_PROGRAMS/typing_benchmarks/invalid/invalid_var_decl5.go
package main

func main() {
	var a, a = 10, 20
	println(a)
}
